# substrate-parachain-template

./: .gitignore  Cargo.toml  Containerfile  README.md  genesis-state  genesis-wasm  rustfmt.toml
.github/workflows/: release.yml
libs/oak_xcm/: Cargo.toml
libs/oak_xcm/src/: lib.rs  xcm_config.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/message/: Cargo.toml
pallets/message/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  xcm_test.rs
pallets/token-dealer/: Cargo.toml
pallets/token-dealer/src/: lib.rs
pallets/tradestorage/: Cargo.toml
pallets/tradestorage/src/: lib.rs  tests.rs
pallets/verifier/: Cargo.toml
pallets/verifier/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  tokens.rs
resources/: rococo-local.json
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
