[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }


[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
