[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "message-example"
version = "2.0.0-rc5"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cumulus-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "cumulus-branch" }

# Cumulus dependencies
cumulus-upward-message = { git = "https://github.com/paritytech/cumulus", branch = "bkchr-rococo", default-features = false }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "bkchr-rococo", default-features = false }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "cumulus-branch", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "polkadot-parachain/std",
]
